# VSL-Langgraph

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: README.md
examples/financial-agents/: purchase_approval_agent.py
examples/marketing/: fake_providers.py  model_ids.py  providers.py  research_publish_agent.py
src/vsl_langgraph/: __init__.py  adapter.py  integration.py
tests/: test_conformance.py  test_integration.py  test_purchase_approval_agent.py
