[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vsl-langgraph"
version = "0.1.0"
description = "LangGraph adapter for VSL (VERBA Specification Language) governance primitives -- implements vsl-core's VSLAdapter conformance contract."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    # vsl-core (dist name super-semantics-vsl) isn't published on PyPI yet --
    # a plain "super-semantics-vsl" requirement here would fail to resolve
    # on a clean install. Switch this to a version pin once it's published;
    # note PyPI itself rejects direct-URL deps at upload time, so this line
    # also has to change before *this* package can be published there.
    "super-semantics-vsl @ git+https://github.com/4vish/VSL-Core.git",
    "langgraph>=0.2",
]
keywords = ["governance", "ai-safety", "guardrails", "langgraph", "vsl", "verba"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.23"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
